kafka-ossm-demo/frontend/se.yml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  labels:
    kiali_wizard: ServiceEntry
  name: se-pizza-kafka-bootstrap
spec:
  hosts:
  - pizza-kafka-bootstrap.kafka.svc.cluster.local
  ports:
  - name: kafka
    number: 9092
    protocol: TCP
    targetPort: 9092
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  labels:
    kiali_wizard: ServiceEntry
  name: se-pizza-kafka-brokers
spec:
  hosts:
  - pizza-kafka-brokers.kafka.svc.cluster.local
  ports:
  - name: brokers
    number: 9092
    protocol: TCP
    targetPort: 9092
  resolution: DNS
---
