kafka-ossm-demo/frontend/vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pizza-frontend
  namespace: kafka
spec:
  gateways:
  - istio-system/frontend-gateway
  hosts:
  - pizza-frontend.apps.cluster2.example.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: pizza-frontend.kafka.svc.cluster.local
        subset: v1
      weight: 100
